overflow bug was fixed

--- a/src/components/todoInput/todoInput.styles.scss
+++ b/src/components/todoInput/todoInput.styles.scss
@@ -1,7 +1,8 @@
 .inputContainer {
   background-image: url('../../assets/bg-desktop-light.jpg');
   background-size: cover;
-  max-width: 100%;
+  background-repeat: no-repeat;
+  width: 100%;
   height: 300px;
   display: flex;
   justify-content: center;
@@ -11,7 +12,8 @@
 .inputContainer-dark{
   background-image: url('../../assets/bg-desktop-dark.jpg');
   background-size: cover;
-  max-width: 100%;
+  background-repeat: no-repeat;
+  width: 100%;
   height: 300px;
   display: flex;
   justify-content: center;
