--- a/src/components/todoList/todoList.styles.scss
+++ b/src/components/todoList/todoList.styles.scss
@@ -6,12 +6,12 @@
   justify-content: center;
   padding-top: 20px;
   padding-bottom: 550px;
-  width: 100vw;
+  width: 100%;
 
   @media only screen and (max-width: 1020px) {
     display: flex;
     position: static;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     height: 100vh;
   }
@@ -25,12 +25,12 @@
   justify-content: center;
   padding-top: 20px;
   padding-bottom: 550px;
-  width: 100vw;
+  width: 100%;
 
   @media only screen and (max-width: 1020px) {
     display: flex;
     position: static;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     height: 100vh;
   }
@@ -61,7 +61,7 @@
   border-radius: 5px;
   text-overflow: clip;
   white-space: wrap;
-
+  overflow: hidden;
   @media only screen and (max-width: 1020px) {
     display: flex;
     width: 320px;
